Blender crashes when I set Material in Viewport shading #45718

Closed
opened 2015-08-07 08:30:34 +02:00 by perfection cat · 9 comments

System Information
Windows XP/SP3 32bits

Blender Version
Broken: version 2.75 (sub 4), branch b'master', commit date b'2015-08-06' b'15:07', hash b'44384c6', b'Release'
Worked: 2.75a

Short description of error
Blender crashes when I set Material in Viewport shading
Exact steps for others to reproduce the error
Run blender.
Open attached file.
Change Viewport shading to Material.
untitled.blend
{F221171}untitled2.png

**System Information** Windows XP/SP3 32bits **Blender Version** Broken: version 2.75 (sub 4), branch b'master', commit date b'2015-08-06' b'15:07', hash b'44384c6', b'Release' Worked: 2.75a **Short description of error** Blender crashes when I set Material in Viewport shading **Exact steps for others to reproduce the error** Run blender. Open attached file. Change Viewport shading to Material. [untitled.blend](https://archive.blender.org/developer/F221170/untitled.blend) {[F221171](https://archive.blender.org/developer/F221171/untitled.png)}![untitled2.png](https://archive.blender.org/developer/F221173/untitled2.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sindra1961

Added subscriber: @sindra1961
Author

Error: EXCEPTION_ACCESS_VIOLATION

Error: EXCEPTION_ACCESS_VIOLATION

Added subscribers: @Sergey, @Psy-Fi

Added subscribers: @Sergey, @Psy-Fi

I can't get a crash here but we do try to pass a NULL pointer to a uniform upload function which is probably causing your driver to go bananas. This is caused by OpenSubdiv passing UV layer inputs as a uniform even though they may not be used. Generally Opensubdiv does a lot of things in the codegen module even when it's not used, which is not so nice.

An easy fix is, of course, to just put a NULL check before uploading, which is what I'll do to keep blender working, since @Sergey is demoing OpenSubdiv in Siggraph in a few days, but we really must tidy up the codegen module, it starts to become somewhat crappy.

I can't get a crash here but we do try to pass a NULL pointer to a uniform upload function which is probably causing your driver to go bananas. This is caused by OpenSubdiv passing UV layer inputs as a uniform even though they may not be used. Generally Opensubdiv does a lot of things in the codegen module even when it's not used, which is not so nice. An easy fix is, of course, to just put a NULL check before uploading, which is what I'll do to keep blender working, since @Sergey is demoing OpenSubdiv in Siggraph in a few days, but we really must tidy up the codegen module, it starts to become somewhat crappy.

This issue was referenced by c30c3fde51

This issue was referenced by c30c3fde51fb5ca6780ef436678c9d4aa07f400c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

If it still persists, please poke again.

If it still persists, please poke again.
Author

Thanks.
I confirmed this fix.
version 2.75 (sub 4), branch b'master', commit date b'2015-08-08' b'00:37', hash b'fef31aa', b'Release'

Thanks. I confirmed this fix. version 2.75 (sub 4), branch b'master', commit date b'2015-08-08' b'00:37', hash b'fef31aa', b'Release'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45718
No description provided.